# AWS-GenAI-Learning

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
agents/: index.html
aws-bedrock/: index.html
doc_themes/: 404.html
docs/: agents.md  aws-bedrock.md  fine-tuning.md  image-multimodal.md  index.md  knowledge-bases-rag.md  model-customization.md  open-source.md  prompt-engineering.md  tags.md  text-generation.md
docs/setup/: aws-console.md  command-line.md
docs/src/00_Prerequisites/: README.md  bedrock_basics.ipynb
docs/src/01_Text_generation/: 00_text_generation_w_bedrock.ipynb  01_code_generation_w_bedrock.ipynb  02_text-summarization-titan+claude.ipynb
fine-tuning/: index.html
image-multimodal/: index.html
knowledge-bases-rag/: index.html
model-customization/: index.html
open-source/: index.html
prompt-engineering/: index.html
search/: search_index.json
setup/aws-console/: index.html
setup/command-line/: index.html
src/00_Prerequisites/: index.html
src/01_Text_generation/: 03_qa_with_bedrock_titan.ipynb  04_entity_extraction.ipynb  index.html
src/02_KnowledgeBases_and_RAG/: 0_create_ingest_documents_test_kb.ipynb  1_managed-rag-kb-retrieve-generate-api.ipynb  2_Langchain-rag-retrieve-api-mistral-and-claude-v2.ipynb  index.html
src/03_Model_customization/: 02_fine-tuning_llama2.ipynb  03_continued_pretraining_titan_text.ipynb  index.html
src/04_Image_and_Multimodal/: index.html
src/05_Agents/: index.html
tags/: index.html
text-generation/: index.html
(+12 files in other folders)
